In 3 homework, removing margin in body.

--- a/FL11_HW3/css/style1.css
+++ b/FL11_HW3/css/style1.css
@@ -1,5 +1,6 @@
 body {
-  background: #ffffff; }
+  background: #ffffff;
+  margin: 0; }
 
 .header-wrap {
   background: url(../img/m-h-day.jpg) no-repeat;
