--- a/FL11_HW3/css/style2.css
+++ b/FL11_HW3/css/style2.css
@@ -1,5 +1,6 @@
 body {
-  background: #262832; }
+  background: #262832;
+  margin: 0; }
 
 .header-wrap {
   background: url(../img/m-h-night.jpg) no-repeat;
