--- a/FL11_HW3/homework/scss/_main.scss
+++ b/FL11_HW3/homework/scss/_main.scss
@@ -7,7 +7,7 @@ $sourceSansPro: "Source Sans Pro", sans-serif;
 }
 
 body {
-  background: $bodyBackgroung;
+  background: $bodyBackground;
   margin: 0;
 }
 
