--- a/FL11_HW3/homework/scss/_variables1.scss
+++ b/FL11_HW3/homework/scss/_variables1.scss
@@ -1,5 +1,5 @@
 $backgroundImage: url(../img/m-h-day.jpg);
-$bodyBackgroung: #ffffff;
+$bodyBackground: #ffffff;
 $footerBackground: #262832;
 $mainFont: "Hind", sans-serif;
 $textIndent: 5px;
