--- a/FL11_HW3/homework/scss/_variables2.scss
+++ b/FL11_HW3/homework/scss/_variables2.scss
@@ -1,5 +1,5 @@
 $backgroundImage: url(../img/m-h-night.jpg);
-$bodyBackgroung: #262832;
+$bodyBackground: #262832;
 $footerBackground: #3d4151;
 $mainFont: "Fresca", sans-serif;
 $textIndent: 2px;
