--- a/FL11_HW11/homework/assets/styles.css
+++ b/FL11_HW11/homework/assets/styles.css
@@ -23,6 +23,7 @@ input.width {
 ol {
   list-style: none;
   padding: 0;
+  position: relative;
 }
 
 #blue_line {
@@ -65,4 +66,8 @@ i:hover {
 
 .no_padding {
   padding: 0;
+}
+
+li {
+  padding: 20px;
 }
